# thehand-server

./: .gitignore  pyproject.toml  readme.md
fake/: __init__.py  fake_board.py  fake_board_eego.py  fake_infer.py
model/: __init__.py  calibrate.py  infer.py  model.py
models/: __init__.py  calibrate.py  infer.py
server/: app.py  views.py
tests/: calibration.py  fake_board.py  fake_infer.py
utils/: __init__.py  board.py  board_eego.py  data_process.py  filter.py  kalman.py  pref.py  record.py
