[tool.poetry]
name = "thehand-server"
version = "0.1.0"
description = "server for thehand"
authors = ["kwzh <wzh.k@outlook.com>"]
readme = "readme.md"
packages = [{include = "thehand_server", from = "server"}]

[tool.poetry.dependencies]
python = "^3.9"
websockets = "^11.0.2"
pytest = "^7.3.1"
pyqtgraph = "^0.13.3"
aiohttp = "^3.8.4"
faker = "^18.6.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
